Emit the Initial Fetch Complete signal

BUG: 423845
The plugin does not emit the initialFetchComplete signal which seems
needed by AllContactsMonitor and PersonsModel does not get initialized
since it waitd for the signal from all plugins